// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AsideSection /> With minimal options matches snapshot 1`] = `
<div
  className="y-aside-section"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn>
      <Heading
        level="2"
        size="6"
      >
        <Text
          uppercase={true}
        >
          Test title
        </Text>
      </Heading>
    </FixedGridColumn>
  </FixedGridRow>
  <div />
</div>
`;

exports[`<AsideSection /> when passed in an action renders correctly 1`] = `
<div
  className="y-aside-section"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn>
      <Heading
        level="2"
        size="6"
      >
        <Text
          uppercase={true}
        >
          Test title
        </Text>
      </Heading>
    </FixedGridColumn>
    <FixedGridColumn
      fixed={true}
    >
      <span />
    </FixedGridColumn>
  </FixedGridRow>
  <div />
</div>
`;

exports[`<AsideSection /> when passed in title renders correctly 1`] = `
<div
  className="y-aside-section"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn>
      <Heading
        level="2"
        size="6"
      >
        <Text
          uppercase={true}
        >
          Test title
        </Text>
      </Heading>
    </FixedGridColumn>
  </FixedGridRow>
  <div />
</div>
`;

exports[`<AsideSection /> with action prop renders the action in its own FixedGridColumn 1`] = `
<div
  className="y-aside-section"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn>
      <Heading
        level="2"
        size="6"
      >
        <Text
          uppercase={true}
        >
          Test title
        </Text>
      </Heading>
    </FixedGridColumn>
    <FixedGridColumn
      fixed={true}
    >
      <span />
    </FixedGridColumn>
  </FixedGridRow>
  <div />
</div>
`;

exports[`<AsideSection /> with children matches the snapshot 1`] = `
<div
  className="y-aside-section"
>
  <FixedGridRow
    gutterSize="small"
  >
    <FixedGridColumn>
      <Heading
        level="2"
        size="6"
      >
        <Text
          uppercase={true}
        >
          Test title
        </Text>
      </Heading>
    </FixedGridColumn>
    <FixedGridColumn
      fixed={true}
    >
      <span />
    </FixedGridColumn>
  </FixedGridRow>
  <div>
    <div>
      content
    </div>
  </div>
</div>
`;
